--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "ethers": "^6.10.0",
     "express": "^4.18.2",
     "node": "^21.2.0",
-    "nodemon": "^3.0.2"
+    "nodemailer": "^6.9.8",
+    "nodemon": "^3.0.2",
+    "random-int": "^3.0.0"
   },
   "name": "backendvoting",
   "version": "1.0.0",
