--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "dependencies": {
+    "alchemy-sdk": "^3.1.2",
     "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "ethers": "^6.10.0",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "node": "^21.2.0",
     "nodemailer": "^6.9.8",
     "nodemon": "^3.0.2",
