--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
     "ethers": "^6.10.0",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.3.0",
+    "mongoose": "^8.1.3",
     "node": "^21.2.0",
     "nodemailer": "^6.9.8",
     "nodemon": "^3.0.2",
-    "random-int": "^3.0.0"
+    "random-int": "^3.0.0",
+    "socket.io": "^4.7.4",
+    "ws": "^8.16.0"
   },
   "name": "backendvoting",
   "version": "1.0.0",
